// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShopifyMoneyAmount/> render() should render 0 as a number 1`] = `
<span>
  A$0.00
</span>
`;

exports[`<ShopifyMoneyAmount/> render() should render 0 as an horizontal dash symbol 1`] = `"—"`;

exports[`<ShopifyMoneyAmount/> render() should render 1`] = `
<span>
  A$9.99
</span>
`;

exports[`<ShopifyMoneyAmount/> render() should render as negative value 1`] = `
<span>
  -A$9.99
</span>
`;
